# pessimism_offline_RL_EHR

./: .gitignore  pyproject.toml
configs/: bandit_beta_sweep.json  bandit_study.json  branching_beta_sweep.json  branching_study.json  intrinsic_beta_sweep.json  intrinsic_study.json  linear_bandit_beta_sweep.json  linear_bandit_study.json  linear_branching_beta_sweep.json  linear_branching_study.json  linear_intrinsic_beta_sweep.json  linear_intrinsic_study.json  linear_near_intrinsic_beta_sweep.json  linear_near_intrinsic_study.json  near_intrinsic_beta_sweep.json  near_intrinsic_study.json
docs/: beta_sweep_report.md  cross_suite_analysis_report.md  four_task_detailed_guide.md  linear_beta_sweep_report.md  linear_quickstart.md  phase1_reproduction_design.md  phase1_tabular_report.md  phase2_linear_design.md  phase2_linear_report.md  phase3_ehr_design.md  tabular_quickstart.md
results/raw/bandit_beta_smoke/: metrics.csv  resolved_config.json  summary.json
results/raw/bandit_beta_sweep/: metrics.csv  resolved_config.json  summary.json
results/raw/bandit_diag_smoke/: metrics.csv  summary.json
results/raw/bandit_smoke/: metrics.csv  summary.json
results/raw/bandit_study/: metrics.csv  resolved_config.json  summary.json
results/raw/branching_beta_smoke/: metrics.csv  resolved_config.json  summary.json
results/raw/branching_beta_sweep/: metrics.csv  (+2 more)
scripts/: inspect_linear_tasks.py  run_beta_sweep.py  run_linear_beta_sweep.py  run_linear_experiment.py  run_tabular_experiment.py
src/peorl/: __init__.py  datasets.py  evaluation.py  experiments.py
(+85 files in other folders)
